# LEO-satellite-constellation-simulator

./: .gitignore  CMakeLists.txt  README.md
sattrack/: 7P_16Sats_closeLink.txt  CMakeLists.txt  TLE_12P_22Sats.txt  TLE_12P_22Sats_36deg.txt  TLE_6P_44Sats.txt  TLE_8P_33Sats_38deg.txt  closeLink.txt  parameter.json  parameter.txt  parameter參數內容解釋.txt  sattrack  sattrack.cc
sattrack/constellationInfo/: 12P_22Sats_40deg_F5_info.json  12P_22Sats_40deg_F5_info.txt  12P_22Sats_40deg_F8_info.json  12P_22Sats_40deg_F8_info.txt  12P_22Sats_40deg_info.json  12P_22Sats_40deg_info.txt  6P_22Sats_info.json  6P_22Sats_info.txt  7P_16Sats_Info.txt  7P_16Sats_info.json  example.json  example.txt  參數內容解釋.txt
sattrack/include/: AER.h  GEO.h  getFileData.h  getTLEdata.h  groundStation.h  mainFunction.h  rectifyAzimuth.h  satellite.h  simParameters.h  util.h
sattrack/inputConstellationInfo/: example.txt
sattrack/inputTLEsFile/: TLE_12P_22Sats_38deg.txt  TLE_12P_22Sats_40deg.txt  TLE_12P_22Sats_40deg_F5.txt  TLE_12P_22Sats_40deg_F8.txt  TLE_6P_22Sats.txt  TLE_6P_22Sats_36deg.txt  TLE_6P_22Sats_38deg.txt  TLE_6P_44Sats_36deg.txt  TLE_6P_44Sats_38deg.txt  TLE_7P_16Sats.txt  TLE_8P_33Sats.txt  TLE_8P_33Sats_36deg.txt
sattrack/src/: getFileData.cc  getTLEdata.cc  groundStation.cc  mainFunction.cc  rectifyAzimuth.cc  satellite.cc  util.cc
